packages/opencode-plugin-manager/src/output/snapshots/ocp__output__human__tests__snapshot_list_mixed_scopes.snap
---
source: src/output/human.rs
assertion_line: 886
expression: "&output"
---
Configured OpenCode plugins

Project
  RAM Monitor  (ram-monitor)
  Monitor OpenCode's RAM usage.
  @capybearista/opencode-ram-monitor
  0.2.1


Global
  third-party
  A third-party plugin.
  third-party
  2.0.0
