packages/opencode-plugin-manager/src/output/snapshots/ocp__output__human__tests__snapshot_render_outdated_human_all_sections.snap
---
source: src/output/human.rs
assertion_line: 676
expression: "&output"
---
Outdated (1):
  outdated-pkg  v1.0.0 → v2.0.0

Current (1):
  current-pkg  v2.0.0

Unresolved (1):
  missing-pkg  not installed (latest: v3.0.0)
