packages/opencode-plugin-manager/src/output/snapshots/ocp__output__human__tests__snapshot_render_plugins_curated_plugin.snap
---
source: src/output/human.rs
assertion_line: 717
expression: "&output"
---
Configured OpenCode plugins

Project
  Curated Plugin  (cp)
  A curated plugin description
  curated-plugin
  1.5.0
