packages/opencode-plugin-manager/src/output/snapshots/ocp__output__human__tests__snapshot_render_plugins_empty_list.snap
---
source: src/output/human.rs
assertion_line: 617
expression: "&output"
---
No configured plugins found.
